fix bug and add more functional